--- a/app/index.html
+++ b/app/index.html
@@ -1,38 +1,29 @@
 <!doctype html>
-<html lang="en" ng-app="myApp">
+<html lang="en" ng-app="prepgui">
 <head>
   <meta charset="utf-8">
-  <title>My AngularJS App</title>
+  <title>PrepGUI</title>
   <link rel="stylesheet" href="css/app.css"/>
 	<link href="css/bootstrap.min.css" rel="stylesheet" media="screen">
 </head>
 <body>
 
 	<div ng-controller="SearchbarCtrl">
-		<br><br>
-		<br><br>
-		<br><br>
-		<br><br>
 
-		<header class="navbar navbar-fixed-top">
+		<header class="navbar">
 			<div class="navbar-inner">
 				<div class="row">
-								<a class="brand span2" href="#"><img src="img/DANRW-Logo-wp.png"></a>
-								<a class="brand span4" href="#"><h1>Test-Portal</h1>zur Entwicklung von Prep</a>
+					<a class="brand span2" href="#"><img src="img/DANRW-Logo-wp.png"></a>
+					<a class="brand span4" href="#"><h1>PrepGUI</h1>DA-NRW Presentation Repository</a>
 				</div>
 			</div>
 			<div class="navbar-inner">
 					<ul class="nav">
 						<li>
 						<form ng-submit="submit()" class="navbar-search pull-down">
-							Search for <input type="text" ng-model="search_term" name="text" class="search-query"/>
+							<input placeholder="Suche in allen Feldern" type="text" ng-model="q" name="text" class="search-query"/>
 						</form>
 						</li>
-					</ul>
-					<ul class="nav pull-right">
-							<li class="pull-right"><a href="#">link1</a></li>
-							<li class="pull-right"><a href="#">link2</a></li>
-							<li class="pull-right"><a href="#">link3</a></li>
 					</ul>
 			</div>
 		</header>
@@ -46,6 +37,7 @@
   <script src="//ajax.googleapis.com/ajax/libs/angularjs/1.0.6/angular.min.js"></script>
   -->
   <script src="lib/angular/angular.js"></script>
+  <script src="lib/angular/angular-resource.js"></script>
   <script src="js/app.js"></script>
   <script src="js/services.js"></script>
   <script src="js/controllers.js"></script>
