margin for brand logo

--- a/app/index.html
+++ b/app/index.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8">
   <title>PrepGUI</title>
   <link rel="stylesheet" href="css/app.css"/>
-	<link href="css/bootstrap.min.css" rel="stylesheet" media="screen">
+  <link href="css/bootstrap.min.css" rel="stylesheet" media="screen">
 </head>
 <body>
 
@@ -13,7 +13,7 @@
 		<header class="navbar">
 			<div class="navbar-inner">
 				<div class="row">
-					<a class="brand span2" href="#"><img src="img/DANRW-Logo-wp.png"></a>
+					<a class="brand span2" style="margin-left:10px" href="#"><img src="img/DANRW-Logo-wp.png"></a>
 					<a class="brand span4" href="#"><h1>PrepGUI</h1>DA-NRW Presentation Repository</a>
 				</div>
 			</div>
