some minor fixes

--- a/app/index.html
+++ b/app/index.html
@@ -3,6 +3,7 @@
 <head>
   <meta charset="utf-8">
   <title>PrepGUI</title>
+  <link rel="icon" href="img/danrw.ico" type="image/x-icon">
   <link rel="stylesheet" href="css/app.css"/>
   <link href="css/bootstrap.min.css" rel="stylesheet" media="screen">
 </head>
@@ -13,7 +14,7 @@
 		<header class="navbar">
 			<div class="navbar-inner">
 				<div class="row">
-					<a class="brand span2" style="margin-left:10px" href="#"><img src="img/DANRW-Logo-wp.png"></a>
+					<a class="brand span2" style="margin-left:10px" href="#"><img style="margin-top:20px" src="img/DANRW-Logo-wp.png"></a>
 					<a class="brand span4" href="#"><h1>PrepGUI</h1>DA-NRW Presentation Repository</a>
 				</div>
 			</div>
