fixed facet and paging links

--- a/app/index.html
+++ b/app/index.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html lang="en" ng-app="prepgui">
+<html ng-app="prepgui">
 <head>
   <meta charset="utf-8">
   <title>PrepGUI</title>
